Fix merge error
Signed-off-by: arjantijms <arjan.tijms@gmail.com>